[package]
name = "yas-application"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
yas = { path = "../yas" , package = "yas_core" }
yas_genshin = { path = "../yas-genshin", package = "yas_scanner_genshin" }
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
winres = "0.1"

[[bin]]
name = "GOODScanner"
path = "src/bin/yas.rs"
