[package]
name = "yas_scanner_genshin"
version = "0.1.16"
edition = "2021"
description = "Genshin Impact item scanner"
repository = "https://github.com/wormtql/yas"
keywords = ["GenshinImpact", "artifacts", "scanner", "ocr"]
license = "GPL-2.0-or-later"

[dependencies]
yas = { path = "../yas", package = "yas_core", features = ["ort", "capturer_screenshots"] }
anyhow = "1.0"
log = "0.4"
clap = { version = "4.4", features = ["derive", "cargo"] }
image = "0.24"
serde_json = "1.0"
regex = "1.5"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
enigo = "0.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
edit-distance = "2.1"
rayon = "1.7"
indicatif = "0.17"
indicatif-log-bridge = "0.2"
strum_macros = "0.26"

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "=1.0.65"
